<resources>
    <string name="app_name">Color </string>

    <!-- sections -->
    <string name="activity_encyclopedia">Colorpedia </string>
    <string name="activity_skill_tree">Training </string>
    <string name="activity_training">Exercise </string>
    <string name="activity_progress">My progress </string>
    <string name="activity_settings">Settings </string>
    <string name="activity_app_info">About app </string>
    <string name="activity_thank">Thank </string>
    <string name="activity_camera">Capture color </string>
    <string name="activity_harmony">Harmony </string>

    <!-- fragments -->
    <string name="fragment_color_info">Information about color </string>
    <string name="fragment_four_colors">Choose color </string>
    <string name="fragment_four_names">Choose right name of color </string>
    <string name="fragment_learn_harmony">Select harmoniously matched colors </string>
    <string name="fragment_train_parameter">Set the correct values </string>
    
    <!-- views -->
    <string name="view_language">Colors names language </string>
    <string name="view_color_picker">Hue-Saturation-Lightness </string>
    <string name="view_harmony">Harmonic variations </string>

    <!-- messages -->
    <string-array name="messages_right_answer">
        <item>Well done! </item>
        <item>You right! </item>
        <item>Keep it up! </item>
        <item>Good! </item>
    </string-array>

    <string-array name="messages_wrong_answer">
        <item>Be more attentive! </item>
        <item>Try it again later! </item>
        <item>Relax! </item>
    </string-array>

    <string name="message_tap_color">Tap on happy little color </string>
    <string name="message_choose_train">Choose the type of training </string>
    <string name="message_progress_lost">Progress will be lost, are you sure? </string>
    <string name="message_change_language">Setted colors name language </string>
    <string name="message_after_reload">Changes will take effect after application reload </string>
    <string name="message_bye_bye">Bye-bye! </string>

    <!-- languages -->
    <string-array name="languages">
        <item>English </item>
        <item>Русский </item>
        <!--<item>中文</item>-->
    </string-array>

    <!-- trains -->
    <string-array name="trains">
        <item>All </item>
        <item>Color </item>
        <item>Space </item>
        <item>Harmony </item>
    </string-array>

    <!-- colors -->
    <string-array name="colors">
        <item>All </item>
        <item>Red </item>
        <item>Yellow </item>
        <item>Green </item>
        <item>Cyan </item>
        <item>Blue </item>
        <item>Magenta </item>
    </string-array>

    <!-- parameters -->
    <string-array name="parameters">
        <item>All </item>
        <item>Hue </item>
        <item>Saturation </item>
        <item>Lightness </item>
        <item>Hue \n and \n Saturation </item>
        <item>Hue \n and \n Lightness </item>
        <item>Saturation \n and \n Lightness </item>
    </string-array>
    <string name="parameter_hue">Hue </string>
    <string name="parameter_saturation">Saturation </string>
    <string name="parameter_lightness">Lightness </string>

    <!-- harmonies -->
    <string-array name="harmonies">
        <item>All </item>
        <item>Complementary </item>
        <item>Analogous </item>
        <item>Triad </item>
        <item>Split-Complementary </item>
        <item>Tetradic </item>
        <item>Square </item>
    </string-array>

    <!-- skills -->
    <string-array name="skills">
        <item>Color </item>
        <item>Hue </item>
        <item>Saturation </item>
        <item>Lightness </item>
        <item>Complementary </item>
        <item>Analogous </item>
        <item>Triad </item>
        <item>Split-Complementary </item>
        <item>Tetradic </item>
        <item>Square </item>
    </string-array>

    <string name="user_name">man </string>

    <!-- buttons -->
    <string name="ok">Ok </string>
    <string name="fix">Fixate </string>
    <string name="choose">Choose </string>
    <string name="unfix">Unfix</string>
    <string name="correct">Correct</string>
    <string name="harmony">Harmony</string>
    <string name="harmony_type">Harmony type </string>
    <string name="variant">Variant </string>
    <string name="nearest_color">Nearest color</string>
    <string name="setup">Setup</string>
    <string name="unknown">Unknown </string>
    <string name="rainbow">Rainbow</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Leave </string>

    <string name="app_info">
        This application is designed to match harmonious color combinations
        and develop a sense of color. Enjoy the harmony of color combinations,
        develop a sense of beauty! Beauty will save the world! </string>
    <string name="link_creator_page">Creator of the app </string>
    <string name="app_creator">Egor Zamotaev </string>
    <string name="my_page_id">100003098094447</string>
    <string name="thanks">I express my gratitude to my mother Sveta for her great love, patience and support. Also I thank my beloved beautiful girl Pauline, in honor of which I dedicate this work.</string>
    <string name="take_picture">Take picture</string>

</resources>
