<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<TextureView
    android:id="@+id/texture"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/btn_takepicture"
    android:layout_alignParentTop="true"/>

<ImageView
    android:id="@+id/centerFrame2"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<LinearLayout
    android:background="@color/transparent_black50"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="@dimen/standart_margin"
            android:layout_gravity="left|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorPreview2"/>

        <LinearLayout
            android:layout_gravity="left|center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="@dimen/standart_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearest_color"/>

            <TextView
                android:layout_marginLeft="@dimen/standart_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/colorPreviewText2"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/fix"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPreviewFix2"/>
        <Button
            android:text="@string/choose"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPreviewOk2"/>
    </LinearLayout>

</LinearLayout>

</FrameLayout>